# grid_planning

./: .rosinstall  CMakeLists.txt  Readme.md  app1.yml  app2.yml  app3.yml  app3b.yml  app4.yml  app5.yml  approach_skill.yml  demo1.yml  demo2.yml  demo3.yml  grasp1.yml  grasp2.yml  grasp3.yml  grasp_skill.yml  grid.rosinstall  model.yml  nm_segment.py  package.xml  setup.py  transport1.yml  transport2.yml  transport_skill.yml
action/: Command.action
config/: ur5.rviz
data/: align1.yml  align2.yml  align3.yml  app1.yml  disengage1.yml  disengage2.yml  disengage3.yml  grasp3.yml  place1.yml  place2.yml  place3.yml  release2.yml  release3.yml
grid_core/: CMakeLists.txt  package.xml  setup.py
grid_experiments/: CMakeLists.txt  package.xml
grid_msgs/: CMakeLists.txt  package.xml
grid_plan_core/: CMakeLists.txt  package.xml  setup.py
grid_plan_msgs/: CMakeLists.txt  package.xml
grid_plan_ur5/: CMakeLists.txt  Readme.md  package.xml
grid_plan_ur5/data/extra/: approach_link_x_01.yml  approach_link_x_02.yml  approach_link_x_03.yml  approach_link_x_04.yml  approach_link_x_20.yml  approach_link_x_21.yml  approach_link_y_01.bag  approach_link_y_02.yml  approach_link_y_03.bag  approach_link_y_03.yml  approach_link_y_04.bag  approach_link_y_04.yml  approach_link_y_05.bag  assemble1_link_x_20.yml  assemble1_link_x_22.yml  assemble2_link_x_20.yml  assemble2_link_x_21.yml  assemble2_link_x_22.yml  assemble_link_x_03.yml  assemble_link_x_04.bag  assemble_link_x_04.yml  assemble_link_y_01.bag  assemble_link_y_02.bag  assemble_link_y_02.yml  assemble_link_y_04.yml  assemble_link_y_05.bag  grasp_link_x_02.bag  grasp_link_x_03.bag  grasp_link_x_03.yml  grasp_link_x_04.yml  grasp_link_x_21.yml  grasp_link_x_23.yml  grasp_link_y_01.yml  grasp_link_y_02.bag  grasp_link_y_03.bag  grasp_link_y_03.yml  grasp_link_y_04.bag  grasp_link_y_05.yml
grid_plan_ur5/data/ur5/: gc1.yml  grab3.yml
grid_plan_ur5/data/ur5_assembly/: align_link_01.yml  approach_link_x_40.bag  approach_link_x_40.yml  approach_link_x_41.bag  approach_link_x_41.yml  approach_link_x_42.bag  approach_link_x_42.yml  assemble1_link_x_40.bag  assemble1_link_x_40.yml  assemble2_link_x_40.bag  assemble2_link_x_40.yml  grasp_link_x_40.bag  grasp_link_x_40.yml  grasp_link_x_41.bag  grasp_link_x_41.yml  grasp_link_x_42.bag  grasp_link_x_42.yml  take_link_01.yml  take_link_02.yml  take_node_01.yml
grid_plan_ur5/data/ur5_assembly_v2/: approach_link_x_12.bag  approach_link_x_13.bag  grasp_link_x_13.bag
grid_plan_ur5/data/ur5_assembly_v3/: approach_link_x_30.bag  approach_link_x_31.bag  approach_link_x_32.bag  assemble1_link_x_30.bag  assemble1_link_x_30.yml  assemble1_link_x_31.bag  assemble1_link_x_32.bag  assemble2_link_x_30.bag  assemble2_link_x_30.yml  assemble2_link_x_31.bag  assemble2_link_x_31.yml  assemble2_link_x_32.bag  assemble2_link_x_32.yml  grasp_link_x_30.bag  grasp_link_x_30.yml  grasp_link_x_31.bag  grasp_link_x_31.yml  grasp_link_x_32.bag
grid_plan_ur5/data/ur5_assembly_v4/: approach_link_x_50.bag  approach_link_x_50.yml  approach_link_x_51.bag  approach_link_x_51.yml  approach_link_x_52.bag  approach_link_x_52.yml  approach_node_z_50.bag  approach_node_z_50.yml  approach_node_z_51.bag  approach_node_z_51.yml  approach_node_z_52.bag  approach_node_z_52.yml  assemble1_link_x_50.bag  assemble1_link_x_50.yml  assemble1_link_x_51.bag  assemble1_link_x_51.yml  assemble1_link_x_52.bag  assemble1_link_x_52.yml  assemble1_node_z_50.bag  assemble1_node_z_50.yml  assemble1_node_z_51.bag  assemble1_node_z_51.yml  assemble1_node_z_52.bag  assemble1_node_z_52.yml  assemble2_link_x_50.bag  assemble2_link_x_50.yml  assemble2_link_x_51.bag  assemble2_link_x_51.yml  assemble2_link_x_52.bag  assemble2_link_x_52.yml  assemble2_node_z_50.bag  assemble2_node_z_50.yml  assemble2_node_z_51.bag  assemble2_node_z_51.yml  assemble2_node_z_52.bag  assemble2_node_z_52.yml  assemble2_node_z_60.bag  assemble2_node_z_60.yml  assemble2_node_z_61.bag  assemble2_node_z_61.yml  (+44 more)
grid_plan_ur5/data/ur5_assembly_v5_wristUp/: approach_link_x_0.bag  approach_link_x_0.yml  approach_link_x_1.bag  approach_link_x_1.yml  approach_link_x_2.bag  approach_link_x_2.yml  approach_link_x_3.bag  approach_link_x_3.yml  approach_node_x_0.bag  approach_node_x_0.yml  approach_node_x_1.bag  approach_node_x_1.yml  approach_node_x_2.bag  approach_node_x_2.yml  assemble_link_x_0.bag  assemble_link_x_0.yml  assemble_link_x_1.bag  assemble_link_x_1.yml  assemble_link_x_2.bag  assemble_link_x_2.yml  assemble_link_x_3.bag  assemble_link_x_3.yml  assemble_node_x_0.bag  assemble_node_x_0.yml  assemble_node_x_1.bag  assemble_node_x_1.yml  assemble_node_x_2.bag  assemble_node_x_2.yml  grasp_link_x_0.bag  grasp_link_x_0.yml  grasp_link_x_1.bag  grasp_link_x_1.yml  grasp_link_x_2.bag  grasp_link_x_2.yml  grasp_link_x_3.bag  grasp_link_x_3.yml  grasp_node_x_0.bag  grasp_node_x_0.yml  grasp_node_x_1.bag  grasp_node_x_1.yml  (+38 more)
grid_plan_ur5/launch/: ur5_planning_context.launch
grid_plan_ur5/scripts/: segment_ur5_assembly.py
grid_plan_ur5/src/: load_ur5_skills.hpp  task_test_node.cpp
grid_predicator/: CMakeLists.txt  package.xml
grid_robots/: CMakeLists.txt  package.xml
grid_server/: CMakeLists.txt  package.xml
grid_tasks/: CMakeLists.txt  package.xml  setup.py
launch/: targets.launch  test_targets.launch  ur5_bringup.launch  ur5_planning_context.launch
long_actions/: app2.yml  app3.yml
needle_master_trials/: trial_0_1444413167976.csv  trial_0_1444413248867.csv  trial_0_1444413311817.csv  trial_0_1444413375231.csv  trial_10_1444413223525.csv  trial_10_1444413298648.csv  trial_10_1444413367896.csv  trial_10_1444413427173.csv  trial_11_1444413227895.csv  trial_11_1444413304302.csv  trial_11_1444413432237.csv  trial_12_1444413233652.csv  trial_13_1444413238479.csv  trial_1_1444413172238.csv  trial_1_1444413252889.csv  trial_1_1444413315194.csv  trial_1_1444413378827.csv  trial_2_1444413176684.csv  trial_2_1444413256365.csv  trial_2_1444413320131.csv  trial_2_1444413382521.csv  trial_3_1444413181692.csv  trial_3_1444413261201.csv  trial_3_1444413324757.csv  (+25 more)
(+405 files in other folders)
